fix(layout): too much space in the mobile sidebar
Users couldn't exit the sidebar when on Iphone SE

--- a/scss/layout/_accountSidebar.scss
+++ b/scss/layout/_accountSidebar.scss
@@ -20,7 +20,7 @@
 }
 
 .offcanvas {
-  width: 280px;
+  width: fit-content !important;
   background: transparent;
   border: none;
   margin: 0;
